# trading_bot

./: config.json  docker-compose.yaml  dockerfile  main.py  pyproject.toml
bot/: dockerfile  main.py
