[tool.poetry]
name = "trading_bot"
version = "0.1.0"
description = ""
authors = ["Hailskurt <47931581+Hailskurt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ccxt = "^1.59.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
